--- a/top.css
+++ b/top.css
@@ -26,7 +26,7 @@ main {
 }
 .section-top-image {
   height: 500px;
-  background-image: url("修了課題photo/ATCumi.png");
+  background-image: url("photo/ATCumi.png");
   background-size: cover;
   background-position: center center;
 }
@@ -86,7 +86,7 @@ main {
   margin-bottom: 30px;
 }
 .section-sakishima-image {
-  background-image: url("修了課題photo/sakishimakoku.jpg");
+  background-image: url("photo/sakishimakoku.jpg");
   background-size: cover;
   background-position: center top;
 }
@@ -98,7 +98,7 @@ main {
   background-color: rgba(248, 205, 205, 0.80);
 }
 .section-yumeshima-image {
-  background-image: url("修了課題photo/yumeshimakoku.jpg");
+  background-image: url("photo/yumeshimakoku.jpg");
   background-size: cover;
   background-position: center top;
 }
@@ -110,7 +110,7 @@ main {
   background-color: rgba(175, 224, 223, 0.80);
 }
 .section-maishima-image {
-  background-image: url("修了課題photo/maishimakoku.jpg");
+  background-image: url("photo/maishimakoku.jpg");
   background-size: cover;
   background-position: center top;
 }
